--- a/examples/template/index.html
+++ b/examples/template/index.html
@@ -2,4 +2,5 @@
 <title>Dynamic Segments Example</title>
 <body>
 <div id="app"></div>
-<script src="/build/react-router-01.js"></script>
+<script src="/build/shared.js"></script>
+<script src="/build/template.js"></script>
